--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "i18next-browser-languagedetector": "^7.1.0",
     "immer": "^10.0.2",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
@@ -48,6 +49,7 @@
     "@bonehub/tailwind-dynamic-colors": "^0.1.2",
     "@testing-library/react": "^14.0.0",
     "@types/humps": "^2.0.3",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20.4.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
