--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-error-boundary": "^4.0.10",
     "react-ga4": "^2.1.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.51.1",
     "react-i18next": "^13.2.2",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
