--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@heroicons/react": "^2.1.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slider": "^1.1.2",
     "@tanstack/react-query": "^4.32.0",
