--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@ant-design/icons": "^5.2.6",
     "@heroicons/react": "^2.1.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slider": "^1.1.2",
     "@tanstack/react-query": "^4.32.0",
     "antd": "^5.12.5",
